<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.opertusmundi.api_auth</groupId>
  <artifactId>parent</artifactId>
  <version>0.0.5</version>
  <packaging>pom</packaging>
  <name>parent</name>
  <url>http://maven.apache.org</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
    <compiler-plugin.version>3.8.1</compiler-plugin.version>
    <jandex-plugin.version>1.2.3</jandex-plugin.version>
    <maven.compiler.release>11</maven.compiler.release>
    <quarkus.platform.version>2.7.5.Final</quarkus.platform.version>
    <lombok.version>1.18.22</lombok.version>
    <junit.version>3.8.1</junit.version>
  </properties>
  <dependencies>
    </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.opertusmundi.api_auth</groupId>
        <artifactId>common</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
          <configuration>
            <source>11</source>
            <target>11</target>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <modules>
    <module>common</module>
    <module>auth_subrequest</module>
  </modules>
</project>
